--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700' rel='stylesheet' type='text/css">
         <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+		
+		
+		<script type="text/javascript">
+			var dispositivo = navigator.userAgent.toLowerCase();
+			if( dispositivo.search(/iphone|ipod|ipad|android/) > -1 ){
+			document.location ="http://pablodavid.github.io/campamobile/"; }
+		</script>
+		
     </head>
     <body>
     	<div class="loader">
@@ -79,7 +87,7 @@
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<img alt="logo" class="logo" src="img/logcamp.png">
 							<h1 class="text-white"><h36>Comenzamos en:</h36></h1>
-							<div class="countdown" data-date="2020, 01, 09"></div>
+							<div class="countdown" data-date="2020, 01, 10"></div>
 						
 						</div>
 					</div><!--end of row-->
