--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		
 		<script type="text/javascript">
 			var dispositivo = navigator.userAgent.toLowerCase();
-			if( dispositivo.search(/iphone|ipod|ipad|android/) > -1 ){
+			if( dispositivo.search(/iphone|ipod|ipad|safari|android/) > -1 ){
 			document.location ="http://pablodavid.github.io/campamobile/"; }
 		</script>
 		
