--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 		
 		
-		<script type="text/javascript">
-			var dispositivo = navigator.userAgent.toLowerCase();
-			if( dispositivo.search(/iphone|ipod|ipad|safari|android/) > -1 ){
-			document.location ="https://mob.campamentodemusicos.cl/"; }
-		</script>
+	<script type="text/javascript">
+		var dispositivo = navigator.userAgent.toLowerCase();
+		if( dispositivo.search(/iphone|ipod|ipad|safari|android/) > -1 ){
+		document.location ="mob.campamentodemusicos.cl"; }
+	</script>
 		
     </head>
     <body>
