--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script type="text/javascript">
 		var dispositivo = navigator.userAgent.toLowerCase();
 		if( dispositivo.search(/iphone|ipod|ipad|safari|android/) > -1 ){
-		document.location ="mob.campamentodemusicos.cl"; }
+		document.location ="http://mob.campamentodemusicos.cl/"; }
 	</script>
 		
     </head>
