--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 		
 		
 	<script type="text/javascript">
-		var dispositivo = navigator.userAgent.toLowerCase();
-		if( dispositivo.search(/iphone|ipod|ipad|safari|android/) > -1 ){
-		document.location ="http://mob.campamentodemusicos.cl/"; }
+	var dispositivo = navigator.userAgent.toLowerCase();
+	if( dispositivo.search(/iphone|ipod|ipad|android/) > -1 )
+		{
+			document.location ="http://mob.campamentodemusicos.cl/";
+		}
 	</script>
 		
     </head>
