--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 	{
 		document.location ="http://mob.campamentodemusicos.cl/";
 	}
-	if ( navigator.userAgent.toLowerCase().indexOf('safari') == -1)
-	{
-		document.location ="http://mob.campamentodemusicos.cl/";
-  	}
+	</script>
+	<script type="text/javascript">
+		if ( navigator.userAgent.toLowerCase().indexOf('safari') == -1)
+		{
+			document.location ="http://mob.campamentodemusicos.cl/";
+  		}
 	</script>
 		
     </head>
