--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 	</script>
 	<script type="text/javascript">
 	var dispositivo = navigator.userAgent.toLowerCase();
-	if( dispositivo.search(/safari/) > -1 )
+	if( dispositivo.search(/chrome/) > -1 )
+	{
+		
+	}
+	else
 	{
 		document.location ="http://mob.campamentodemusicos.cl/";
 	}
