--- a/index.html
+++ b/index.html
@@ -20,24 +20,15 @@
         <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 		
 		
-	<script type="text/javascript">
-	var dispositivo = navigator.userAgent.toLowerCase();
-	if( dispositivo.search(/iphone|ipod|ipad|android/) > -1 )
-	{
-		document.location ="http://mob.campamentodemusicos.cl/";
-	}
-	</script>
-	<script type="text/javascript">
-	var dispositivo = navigator.userAgent.toLowerCase();
-	if( dispositivo.search(/chrome/) > -1 )
-	{
-		
-	}
-	else
-	{
-		document.location ="http://mob.campamentodemusicos.cl/";
-	}
-	</script>
+		<script type="text/javascript">
+			var dispositivo = navigator.userAgent.toLowerCase();
+			if( dispositivo.search(/chrome/) > -1 )
+			{}
+			else
+			{
+				document.location ="https://mob.campamentodemusicos.cl/";
+			}
+		</script>
 		
     </head>
     <body>
