--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
         
         <title>Campamento de músicos | 2020</title>
-        <meta name="description" content="">
+	<meta name="description" content="El campamento de músicos tiene como objetivo, reunir adoradores desde distintas partes de Chile para reforzar, aprender, y fortalezer el conocimiento de la música...">
+    	<meta name="keywords" content="Campamento, musicos, campamento de musicos, chile, iglesia">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
