--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
 		
 		
 		<script type="text/javascript">
-			var dispositivo = navigator.userAgent.toLowerCase().indexOf("android");
-			if( isAndroid > -1 )
-			{
-				document.location ="https://mob.campamentodemusicos.cl/";
-			}
 			var dispositivo = navigator.userAgent.toLowerCase();
 			if( dispositivo.search(/chrome/) > -1 )
 			{}
 			else
+			{
+				document.location ="https://mob.campamentodemusicos.cl/";
+			}
+		</script>
+	    	<script type="text/javascript">
+	    		var dispositivo = navigator.userAgent.toLowerCase().indexOf("android");
+			if( isAndroid > -1 )
 			{
 				document.location ="https://mob.campamentodemusicos.cl/";
 			}
