--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<ul class="social-icons text-right">
 								
 								<li>
-									<a href="#">
+									<a href="https://www.facebook.com/campamentode.musicos/" target="_blank">
 										<i class="icon social_facebook"></i>
 									</a>
 								</li>
@@ -109,7 +109,12 @@
 								<div class="photo-form-wrapper clearfix">
 									<div class="row">
 										<!-- RRSS -->
-										<li><h35>Mas info: </h35><a href="https://www.instagram.com/campamentodemusicos/"><i class="icon social_instagram"></i></a></li>
+										<li>
+											<h35>Mas info: </h35>
+											<a href="https://www.instagram.com/campamentodemusicos/" target="_blank">
+												<i class="icon social_instagram"></i></a>
+											<a href="https://www.facebook.com/campamentode.musicos/" target="_blank"><i class="icon social_facebook"></i></a>
+										</li>
 										<!--    -->
 										<h37 class="text-white">Ingresa tus datos para postular:</h37>
 										<form class="mail-list-signup">
