--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 					<div class="row nav-menu">
 						<div class="col-sm-3 col-md-2 columns">
 							<a href="#">
-								<img class="logo logo-light" alt="Logo" src="img/logsolo.png">
-								<img class="logo logo-dark" alt="Logo" src="img/logsolo.png">
+								<img class="logo logo-light" alt="Logo" src="img/mcfa.png">
+								<img class="logo logo-dark" alt="Logo" src="img/mcfa.png">
 							</a>
 						</div>
 					
