--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         
-   	<meta name="google-site-verification" content="google-site-verification=kTgvsl0uDXBggAeh7nUbsTH4dLqE8UAtlznCyvCeS_A">
+   	<meta name="google-site-verification" content="kTgvsl0uDXBggAeh7nUbsTH4dLqE8UAtlznCyvCeS_A" />
         <title>Campamento de músicos | 2020</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
