--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         
    	<meta name="google-site-verification" content="kTgvsl0uDXBggAeh7nUbsTH4dLqE8UAtlznCyvCeS_A" />
+	<meta name="description" content="El campamento de músicos tiene como objetivo, reunir adoradores desde distintas partes de Chile para reforzar, aprender, y fortalezer el conocimiento de la música...">
+     	<meta name="keywords" content="Campamento, musicos, campamento de musicos, chile, iglesia">
         <title>Campamento de músicos | 2020</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
