--- a/index.html
+++ b/index.html
@@ -111,9 +111,22 @@
 							<div class="col-sm-12 text-center">
 								<div class="photo-form-wrapper clearfix">
 									<div class="row">
+										<div class="row">
+										<button class="buttonbox" id="myBtn"><h38>Más información</h38></button>
+
+										<!-- The Modal -->
+										<div id="myModal" class="modal">
+
+  										<!-- Modal content -->
+  										<div class="modal-content">
+    										<span class="close"></span>
+   												<img alt="Informacion" src="img/laminfcamp2020.jpg">
+  										</div>
+
+										</div>
 										<!-- RRSS -->
 										<li>
-											<h35>Mas info: </h35>
+											<h35>Redes sociales:</h35>
 											<a href="https://www.instagram.com/campamentodemusicos/" target="_blank">
 												<i class="icon social_instagram"></i></a>
 											<a href="https://www.facebook.com/campamentode.musicos/" target="_blank"><i class="icon social_facebook"></i></a>
