--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<div class="photo-form-wrapper clearfix">
 									<div class="row">
 										<div class="row">
-										<button class="buttonbox" id="myBtn"><h38>Más información</h38></button>
+										<button class="buttonbox" id="myBtn"><h38>Click para más información</h38></button>
 
 										<!-- The Modal -->
 										<div id="myModal" class="modal">
